<resources>
    <string name="app_name">Dr Fazla Alahi Khan</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="textview">TextView</string>
    <string name="dr_fazla_alahi_khan">Dr Fazla Alahi Khan</string>
    <string name="todo">TODO</string>
    <string name="dr_fazla_alahi_khan">Dr Fazla Alahi Khan</string>
    <string name="mbbs_md_nephrology_specialist_in_renal_medicine">MBBS, MD (Nephrology), Specialist in Renal Medicine</string>
    <string name="mbbs_md_nephrology">MBBS, MD (Nephrology)</string>
    <string name="mbbs_m_d_nephrology">MBBS, M.D.(Nephrology)</string>
    <string name="mbbs_m_d_nephrology">MBBS, M.D.(Nephrology)</string>
    <string name="assistant_professor">Assistant Professor</string>
    <string name="textview">TextView</string>
    <string name="ministry_of_health_bangladesh">Ministry of Health, Bangladesh</string>
    <string name="assistant_professor_and_head_department_of_nephrology">Assistant Professor and Head, Department of Nephrology</string>
    <string name="assistant_professor_and_head_department_of_nephrology_">Assistant Professor and Head Department of Nephrology</string>
    <string name="abdul_malek_ukil_medical_college_jananeta_nurul_haq_adhunik_hospital">Abdul Malek Ukil Medical College  Jananeta Nurul Haq Adhunik Hospital</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="make_appointment">Make Appointment</string>
    <string name="chamber_info">Chamber Info</string>
    <string name="appointment">Appointment</string>
    <string name="chamber_info">Chamber Info</string>
    <string name="sms">SMS</string>
    <string name="todo">TODO</string>
    <string name="appintments_for_each_day_is_taken_on_the_previous_day_till_3_pm_except_for_thursdays_and_fridays">Appintments for each day is taken on the previous day till 3 PM Except for Thursdays and Fridays</string>
    <string name="appointments_for_saturday_are_taken_on_friday_from_3_pm">Appointments for Saturday are taken on Friday from 3 PM</string>
    <string name="todo">TODO</string>
    <string name="chamber_info">Chamber Info</string>
    <string name="appointment">Appointment</string>
    <string name="sms">SMS</string>
    <string name="appointments_are_only_taken_on_thursdays_after_3_pm">Appointments are only taken on Thursdays after 3 PM</string>
    <string name="chamber_1_logo">Chamber 1 logo</string>
    <string name="logo_2">logo 2</string>
</resources>
