<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="370dp"
        android:layout_height="443dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:contentDescription="@android:string/untitled"
        app:srcCompat="@android:color/holo_blue_light" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="173dp"
        android:gravity="center"
        android:text="@string/abdul_malek_ukil_medical_college_jananeta_nurul_haq_adhunik_hospital" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="201dp"
        android:layout_height="35dp"
        android:layout_below="@+id/textView6"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="9dp"
        android:gravity="center"
        android:text="@string/assistant_professor_and_head_department_of_nephrology_"
        android:textColor="@android:color/background_dark" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="31dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="60dp"
        android:dropDownWidth="wrap_content"
        android:spinnerMode="dialog"
        android:visibility="visible" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="262dp"
        android:layout_height="308dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/dr_fazla_alahi_khan"
        app:srcCompat="@drawable/Dr Fazla Alahi Khan"
        tools:srcCompat="@mipmap/ic_launcher_foreground" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="246dp"
        android:text="@string/dr_fazla_alahi_khan"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="306dp"
        android:text="@string/mbbs_m_d_nephrology"
        android:textAllCaps="true"
        android:textColor="@android:color/background_dark" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/assistant_professor"
        android:textColor="@android:color/background_dark" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true"
        android:text="@string/ministry_of_health_bangladesh" />

</RelativeLayout>